# vc-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.en.md  README.md  THIRD_PARTY_NOTICES.md  build.rs  download-models.ps1  index.html  justfile  robots.txt  sitemap.xml
.cargo/: config.toml
crates/vc-app/: Cargo.toml
crates/vc-app/src/: audio.rs  lib.rs  realtime.rs  wasapi_audio.rs
crates/vc-cli/: Cargo.toml  build.rs  package-tensorrt.ps1  package-windowsml.ps1  package.ps1
crates/vc-cli/src/: audio.rs  cli.rs  doctor.rs  engine.rs  engine_cache.rs  main.rs  windows_ml_eps.rs
crates/vc-core/: Cargo.toml  build.rs
crates/vc-core/src/: dsp.rs  lib.rs  model_rvc.rs  provider.rs  rnnoise.rs  sola.rs  windows_ml.rs
crates/vc-core/src/model_rvc/: api.rs  cache.rs  f0_postprocess.rs  inspect.rs  native_tensorrt.rs  native_tensorrt_shim.cpp  onnx_meta.rs  pipeline.rs  pitch.rs  sessions.rs  tensorrt.rs  tests.rs
crates/vc-gui/: Cargo.toml
crates/vc-gui/src/: main.rs
crates/vc-vst3/: Cargo.toml  README.md  about.toml  build.rs  package-cuda.ps1  package-tensorrt.ps1  package-windowsml.ps1  package.ps1  vc-rs-vst3.example.toml
crates/vc-vst3/src/: config.rs  dll_path.rs  editor.rs  lib.rs  params.rs  runtime.rs
docs/: architecture.md  architecture_ja.md  cli.md  cli_ja.md  development_ja.md  distribution.md  tensorrt_performance_ja.md
scripts/: README.md  activate.ps1  bootstrap.ps1  compare-audio.ps1  generate-rust-licenses.ps1  install-vst3-bundle.ps1  install-vst3-validator.ps1  package-all.ps1  release.ps1  rustflags.ps1  validate-vst3.ps1  verify.ps1
scripts/licenses/: about.hbs  about.toml
scripts/licenses/static/: THIRD-PARTY-NOTICES.md
src/: audio.rs  cli.rs  dsp.rs  engine.rs  main.rs  model_rvc.rs  sola.rs  wasapi_audio.rs
src/model_rvc/: feature.rs  inspect.rs  native_tensorrt_shim.cpp  pipeline.rs  pitch.rs  sessions.rs  shape.rs  stream.rs  tensorrt.rs  tests.rs
tools/audio_compare/: Cargo.toml
tools/audio_compare/src/: main.rs
tools/tensorrt_builder/: Cargo.toml  build.rs
tools/tensorrt_builder/src/: main.rs  trt_builder_shim.cpp
tools/tensorrt_probe/: Cargo.toml  build.rs
tools/tensorrt_probe/src/: main.rs  trt_probe_shim.cpp
xtask/: Cargo.toml
