[workspace]
resolver = "2"
members = ["crates/vc-core", "crates/vc-cli", "crates/vc-vst3", "xtask"]
exclude = ["tools/tensorrt_probe"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
tracing = "0.1"
rubato = "2"
# Base ONNX Runtime: CPU core only. The CUDA execution provider (which pulls the
# large `onnxruntime_providers_cuda.dll` and its cuDNN dependencies) is opt-in
# via the `vc-core/cuda` feature, and native TensorRT (a load-time `nvinfer_<N>.dll`
# dependency, N = 10/11/...) via `vc-core/tensorrt`. This lets us ship a TensorRT-only plugin
# build that drops the CUDA EP entirely, and a CUDA build that drops TensorRT.
ort = { version = "2.0.0-rc.12", features = ["preload-dylibs"] }
