[workspace]
resolver = "2"
members = ["crates/vc-core", "crates/vc-cli", "crates/vc-vst3", "xtask"]
exclude = ["tools/tensorrt_probe"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
tracing = "0.1"
rubato = "2"
# Base ONNX Runtime: CPU core only. Provider features are opt-in in `vc-core`:
# Windows ML loads the system Windows App SDK Runtime ORT dynamically, CUDA pulls
# the large CUDA EP, and native TensorRT avoids ORT entirely.
ort = { version = "2.0.0-rc.12", features = ["preload-dylibs"] }
