[workspace]
resolver = "2"
members = ["crates/vc-core", "crates/vc-app", "crates/vc-cli", "crates/vc-gui", "crates/vc-vst3", "xtask"]
exclude = ["tools/tensorrt_builder", "tools/audio_compare"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"

# Drop symbols/debug info from shipped binaries. Absolute build-machine paths
# (which include the developer's user name, via panic-location / dep + std source
# strings in .rdata) are scrubbed separately with rustc --remap-path-prefix,
# applied via scripts/rustflags.ps1 (cargo's `trim-paths` profile option is still
# unstable on this toolchain). The env!("CARGO_MANIFEST_DIR") path is gated out in
# native_tensorrt.rs — remap-path-prefix does not cover env! values.
[profile.release]
strip = true

[workspace.dependencies]
anyhow = "1.0"
tracing = "0.1"
rubato = "2"
# Base ONNX Runtime: CPU core only. Provider features are opt-in in `vc-core`:
# Windows ML loads the system Windows App SDK Runtime ORT dynamically, CUDA pulls
# the large CUDA EP, and native TensorRT avoids ORT entirely.
ort = { version = "2.0.0-rc.12", features = ["preload-dylibs"] }
