[package]
name = "vc-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI-based RVC voice conversion prototype in Rust"

[[bin]]
name = "vc-rs"
path = "src/main.rs"

[features]
# The default `vc-rs.exe` supports both Windows ML (CPU/DirectML via the Windows
# App SDK Runtime) and native TensorRT, so one binary covers both providers and
# `cargo build`/`cargo test` keep their current backend set. The distribution
# packages (package.ps1) build single-provider variants explicitly with
# `--no-default-features --features windowsml|tensorrt|cuda`, mirroring vc-vst3.
default = ["windowsml", "tensorrt"]
windowsml = ["vc-core/windowsml"]
tensorrt = ["vc-core/tensorrt"]
cuda = ["vc-core/cuda"]

[dependencies]
# `clap` is always on (the CLI derives `value_enum` from vc-core's `Provider`);
# the inference backends are selected through this crate's features above.
vc-core = { path = "../vc-core", features = ["clap"] }
anyhow.workspace = true
tracing.workspace = true
clap = { version = "4.5", features = ["derive"] }
cpal = "0.17"
ctrlc = "3.4"
hound = "3.5"
rtrb = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thread-priority = "3.0.0"

[target.'cfg(windows)'.dependencies]
wasapi = "0.23"

[dev-dependencies]
approx = "0.5"
