[package]
name = "vc-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI-based RVC voice conversion prototype in Rust"

[[bin]]
name = "vc-rs"
path = "src/main.rs"

[features]
# The default `vc-rs.exe` supports both Windows ML (CPU/DirectML via the Windows
# App SDK Runtime) and native TensorRT, so one binary covers both providers and
# `cargo build`/`cargo test` keep their current backend set. The distribution
# packages (package.ps1) build single-provider variants explicitly with
# `--no-default-features --features windowsml|tensorrt|cuda`, mirroring vc-vst3.
default = ["windowsml", "tensorrt", "rnnoise"]
windowsml = ["vc-core/windowsml", "vc-app/windowsml"]
tensorrt = ["vc-core/tensorrt", "vc-app/tensorrt"]
cuda = ["vc-core/cuda", "vc-app/cuda"]
rnnoise = ["vc-core/rnnoise", "vc-app/rnnoise"]
# Static ORT CPU only: a self-contained, deterministic `vc-rs.exe` for the A/B
# audio comparison workflow (see scripts/compare-audio.ps1). Build with
# `--no-default-features --features cpu`.
cpu = ["vc-core/ort", "vc-app/cpu"]

[dependencies]
# `clap` is always on (the CLI derives `value_enum` from vc-core's `Provider`);
# the inference backends are selected through this crate's features above.
vc-core = { path = "../vc-core", features = ["clap"] }
vc-app = { path = "../vc-app", default-features = false }
anyhow.workspace = true
tracing.workspace = true
clap = { version = "4.5", features = ["derive"] }
cpal = "0.17"
ctrlc = "3.4"
hound = "3.5"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
approx = "0.5"
