[package]
name = "vc-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Reusable RVC voice conversion pipeline (model_rvc, dsp, sola)"

[features]
# Enables `clap::ValueEnum` derivation on shared config enums (e.g. `Provider`)
# so the CLI can use them directly as `value_enum` args. Plugins leave it off.
clap = ["dep:clap"]
# Enables native TensorRT support. This deliberately does not enable ONNX
# Runtime's TensorRT EP; `Provider::TensorRt` builds serialized engines through
# TensorRT's builder API and runs them through the native shim.
tensorrt = []

[dependencies]
anyhow.workspace = true
tracing.workspace = true
rubato.workspace = true
ort.workspace = true
audioadapter-buffers = "3"
xxhash-rust = { version = "0.8.15", default-features = false, features = ["xxh3"] }
clap = { version = "4.5", features = ["derive"], optional = true }

[build-dependencies]
cc = "1"

[dev-dependencies]
approx = "0.5"
