[package]
name = "vc-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Standalone GUI for vc-rs"

[features]
default = ["windowsml", "tensorrt", "rnnoise"]
windowsml = ["vc-app/windowsml", "vc-core/windowsml"]
tensorrt = ["vc-app/tensorrt", "vc-core/tensorrt"]
cuda = ["vc-app/cuda", "vc-core/cuda"]
rnnoise = ["vc-app/rnnoise", "vc-core/rnnoise"]

[dependencies]
vc-app = { path = "../vc-app", default-features = false }
vc-core = { path = "../vc-core" }
eframe = { version = "0.34.1", default-features = false, features = ["glow", "default_fonts"] }
egui = "0.34.1"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
