[package]
name = "vc-vst3"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "VST3/CLAP RVC voice conversion plugin"

[lib]
crate-type = ["cdylib", "lib"]

[features]
# Default package: CPU + Windows ML via Windows App SDK Runtime 2.x, which keeps
# ONNX Runtime/DirectML DLLs out of the bundle. Build CUDA or TensorRT packages
# explicitly with `--no-default-features --features cuda|tensorrt`.
default = ["windowsml"]
# The CUDA build bundles and preloads the ONNX Runtime CUDA provider DLLs, so it
# needs the `ort` dependency. The TensorRT-only build drops ORT entirely.
cuda = ["vc-core/cuda", "dep:ort"]
windowsml = ["vc-core/windowsml", "dep:ort"]
tensorrt = ["vc-core/tensorrt"]

[dependencies]
# `vst3` is an opt-in feature: nih-plug's VST3 bindings are GPLv3, so building
# the VST3 target makes the resulting binary GPLv3. CLAP export is always on.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["vst3"] }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git" }
vc-core = { path = "../vc-core" }
rtrb = "0.3"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow.workspace = true
ort = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_LibraryLoader"] }
